unified_tests/file_roles/visible_constant_declaration_in_test_file/expect/build.text.stderr
lib.test.copp:1:9: error: visible declarations are not allowed in .test.copp files
  visible ANSWER: int64 := 42
          ^
